--- a/理解/9.swiper-vue/package.json
+++ b/理解/9.swiper-vue/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "swiper-vue",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "9.swiper-vue",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "core-js": "^3.6.4",
+    "vue": "^2.6.11"
+  },
   "devDependencies": {
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
+    "@vue/cli-plugin-babel": "~4.3.1",
+    "@vue/cli-service": "~4.3.1",
+    "vue-template-compiler": "^2.6.11"
   }
 }
